pyinterp/pyinterp/pyinterp/tests/must_pass/errors/missing_arg7.py
def f(x, y, z, w):
    pass
f(1)
